--- a/src/serverinfodialog.ui
+++ b/src/serverinfodialog.ui
@@ -6,20 +6,52 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>300</width>
-    <height>130</height>
+    <width>310</width>
+    <height>169</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Server info</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="1" colspan="2">
-    <widget class="QLabel" name="label_server_info">
+   <item row="2" column="4">
+    <widget class="QPushButton" name="pb_import">
+     <property name="maximumSize">
+      <size>
+       <width>30</width>
+       <height>16777215</height>
+      </size>
+     </property>
+     <property name="toolTip">
+      <string>Import settings</string>
+     </property>
      <property name="text">
-      <string/>
+      <string>...</string>
      </property>
     </widget>
+   </item>
+   <item row="3" column="5">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::StandardButton::Cancel|QDialogButtonBox::StandardButton::Ok</set>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="3">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Orientation::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
    </item>
    <item row="0" column="1" colspan="5">
     <layout class="QFormLayout" name="formLayout">
@@ -49,49 +81,33 @@
      </item>
     </layout>
    </item>
-   <item row="1" column="5">
+   <item row="2" column="5">
     <widget class="QPushButton" name="pb_test">
      <property name="text">
       <string>Test</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="5">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+   <item row="2" column="1" colspan="2">
+    <widget class="QLabel" name="label_server_info">
+     <property name="text">
+      <string/>
      </property>
     </widget>
    </item>
-   <item row="1" column="3">
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
-   </item>
-   <item row="1" column="4">
-    <widget class="QPushButton" name="pb_import">
-     <property name="maximumSize">
-      <size>
-       <width>30</width>
-       <height>16777215</height>
-      </size>
-     </property>
-     <property name="toolTip">
-      <string>Import settings</string>
-     </property>
+   <item row="4" column="2" colspan="4">
+    <widget class="QLabel" name="label_status">
      <property name="text">
-      <string>...</string>
+      <string/>
+     </property>
+     <property name="alignment">
+      <set>Qt::AlignmentFlag::AlignCenter</set>
+     </property>
+     <property name="wordWrap">
+      <bool>true</bool>
+     </property>
+     <property name="textInteractionFlags">
+      <set>Qt::TextInteractionFlag::LinksAccessibleByMouse|Qt::TextInteractionFlag::TextSelectableByMouse</set>
      </property>
     </widget>
    </item>
